--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -205,7 +205,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="TextView"
+        android:text="klrisutes"
         app:layout_constraintBaseline_toBaselineOf="@+id/secondnum"
         app:layout_constraintEnd_toStartOf="@+id/secondnum"
         app:layout_constraintHorizontal_bias="0.88"
@@ -219,9 +219,19 @@
         android:ems="10"
         android:focusableInTouchMode="true"
         android:inputType="numberSigned|numberDecimal"
-        android:text="Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/result" />
+
+    <Button
+        android:id="@+id/clearbutton"
+        android:layout_width="69dp"
+        android:layout_height="47dp"
+        android:text="jnjel naxuy"
+        android:textSize="7sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/button7"
+        app:layout_constraintEnd_toStartOf="@+id/button7"
+        app:layout_constraintHorizontal_bias="0.551"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
