--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -225,13 +225,14 @@
 
     <Button
         android:id="@+id/clearbutton"
-        android:layout_width="69dp"
+        android:layout_width="58dp"
         android:layout_height="47dp"
+        android:layout_marginTop="8dp"
         android:text="jnjel naxuy"
         android:textSize="7sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/button7"
-        app:layout_constraintEnd_toStartOf="@+id/button7"
-        app:layout_constraintHorizontal_bias="0.551"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/operation"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/secondnum" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
