--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -235,4 +235,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/secondnum" />
 
+    <Button
+        android:id="@+id/negButton"
+        android:layout_width="47dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:text="NEG"
+        app:layout_constraintBottom_toTopOf="@+id/buttonmultiply"
+        app:layout_constraintStart_toEndOf="@+id/buttondevide"
+        app:layout_constraintTop_toBottomOf="@+id/secondnum" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
